<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_top_navbar_color"
    android:orientation="vertical"
    tools:context=".activities.SettingsActivity">

    <LinearLayout
        android:id="@+id/layout_top_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/settings_top_navbar_color"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_back"
            app:tint="@color/text_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/settings"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_bottom_navbar"
        android:layout_below="@+id/layout_top_navbar"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="-7dp"
        android:background="@color/background_color"
        android:clipToPadding="false"
        android:paddingBottom="10dp"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:background="@color/settings_top_navbar_color" />

            <View
                android:id="@+id/view_settings_placeholder"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="75dp"
                android:background="@drawable/settings_radius" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_profile_pic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher"
                app:civ_border_color="#000"
                app:civ_border_width="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/view_settings_placeholder"
                android:background="@color/background_color"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/change_image"
                    android:textColor="@color/text_color"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="41dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/preferences"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    app:cardBackgroundColor="@color/navbar_color"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switch_dark_mode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="20dp"
                            android:text="@string/dark_mode"
                            android:textColor="@color/sub_text_color"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="20dp"
                            android:background="#000" />

                        <LinearLayout
                            android:id="@+id/layout_change_language"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal"
                            android:paddingBottom="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:text="@string/language"
                                android:textColor="@color/sub_text_color"
                                android:textSize="16sp" />

                            <View
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_weight="1" />

                            <ImageView
                                android:layout_width="22sp"
                                android:layout_height="22sp"
                                android:layout_marginEnd="25dp"
                                android:contentDescription="@string/app_name"
                                android:src="@drawable/ic_next"
                                app:tint="@color/sub_text_color" />


                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="41dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/about"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    app:cardBackgroundColor="@color/navbar_color"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:paddingTop="10dp"
                                android:paddingEnd="20dp"
                                android:text="@string/version"
                                android:textColor="@color/sub_text_color"
                                android:textSize="16sp" />

                            <View
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_weight="1" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:layout_marginEnd="20dp"
                                android:paddingTop="10dp"
                                android:paddingEnd="10dp"
                                android:text="1.0"
                                android:textColor="@color/sub_text_color"
                                android:textSize="16sp"
                                tools:ignore="RtlSymmetry" />


                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="20dp"
                            android:background="#000" />

                        <TextView
                            android:id="@+id/tv_rate_us"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="20dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:text="@string/rate_us"
                            android:textColor="@color/sub_text_color"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:background="#000" />

                        <TextView
                            android:id="@+id/tv_other_apps"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="20dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:text="@string/other_apps"
                            android:textColor="@color/sub_text_color"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:background="#000" />

                        <LinearLayout
                            android:id="@+id/layout_show_version_notes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="5dp"
                            android:paddingBottom="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:text="@string/version_notes"
                                android:textColor="@color/sub_text_color"
                                android:textSize="16sp" />

                            <View
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_weight="1" />

                            <ImageView
                                android:layout_width="22sp"
                                android:layout_height="22sp"
                                android:layout_marginEnd="25dp"
                                android:contentDescription="@string/app_name"
                                android:src="@drawable/ic_next"
                                app:tint="@color/sub_text_color" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/layout_bottom_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/mainac_bottom_layout_background"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:id="@+id/btn_notes"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_all_notes" />

        <ImageView
            android:id="@+id/btn_settings"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_settings"/>

    </LinearLayout>


</RelativeLayout>