<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".activities.CreateNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:clipToPadding="false"
        android:paddingBottom="10dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_back"
                    app:tint="@color/text_color" />

                <TextView
                    android:id="@+id/tv_activity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="Add/Edit Note"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/img_save"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_save"
                    app:tint="@color/text_color" />

            </LinearLayout>

            <EditText
                android:id="@+id/et_input_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:hint="@string/enter_title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:textColor="@color/text_color"
                android:textColorHint="#737070"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:text="@string/date_time_placeholder"
                android:textSize="12sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/et_input_subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="12dp"
                    android:background="@null"
                    android:hint="@string/enter_subtitle"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/sub_text_color"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/view_subtitle_indicator"
                    tools:ignore="MissingConstraints" />

                <View
                    android:id="@+id/view_subtitle_indicator"
                    android:layout_width="5dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/subtitle_indicator_background"
                    app:layout_constraintBottom_toBottomOf="@id/et_input_subtitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/et_input_subtitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/et_input_note_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:gravity="start"
                android:hint="@string/enter_text"
                android:importantForAutofill="no"
                android:minHeight="100dp"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:textColor="@color/sub_text_color"
                android:textSize="14sp"
                android:inputType="text" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/img_removeImage"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_delete"
                    android:visibility="gone"
                    app:tint="#C50000" />

                <ImageView
                    android:id="@+id/img_note_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_removeImage"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_save"
                    android:visibility="gone" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/layout_create_note_settings" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>